Bug 1933119 - Minor nsFocusManager clean-ups. r=hsivonen,dom-core,edgar

No behavior change.

Differential Revision: https://phabricator.services.mozilla.com/D230099